-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: hs25
-
Component/s: hotspot
-
b30
-
x86
-
generic
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8013685 | 8 | Jiangli Zhou | P1 | Closed | Fixed | b88 |
in Comp_Baseline-Tiered-Unstable.2013-04-22 'java -version' trigger asset
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=\macroAssembler_x86.hpp:121
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (c:\jprt\t\p1\172708.amurillo\s\src\cpu\x86\vm\macroAssembler_x86.hpp:121), pid=3628, tid=64232
# guarantee(this->is8bit(imm8)) failed: Short forward jump exceeds 8-bit offset
#
# JRE version: (8.0-b85) (build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (25.0-b30-internal-201304191727.amurillo.hs25-b30-comp-sync-fastdebug compiled mode, sharing windows-amd64 )
# Core dump written. Default location: C:\local\aurora\sandbox\results\hs_err_pid3628.mdmp
#
# An error report file with more information is saved as:
# C:\local\aurora\sandbox\results\hs_err_pid3628.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=\macroAssembler_x86.hpp:121
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (c:\jprt\t\p1\172708.amurillo\s\src\cpu\x86\vm\macroAssembler_x86.hpp:121), pid=3628, tid=64232
# guarantee(this->is8bit(imm8)) failed: Short forward jump exceeds 8-bit offset
#
# JRE version: (8.0-b85) (build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (25.0-b30-internal-201304191727.amurillo.hs25-b30-comp-sync-fastdebug compiled mode, sharing windows-amd64 )
# Core dump written. Default location: C:\local\aurora\sandbox\results\hs_err_pid3628.mdmp
#
# An error report file with more information is saved as:
# C:\local\aurora\sandbox\results\hs_err_pid3628.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
- backported by
-
JDK-8013685 guarantee(this->is8bit(imm8)) failed: Short forward jump exceeds 8-bit offset
-
- Closed
-
- relates to
-
JDK-8010437 guarantee(this->is8bit(imm8)) failed: Short forward jump exceeds 8-bit offset
-
- Resolved
-