8013041: guarantee(this->is8bit(imm8)) failed: Short forward jump exceeds 8-bit offset

Change jmpb() to jmp().

Reviewed-by: coleenp, rdurbin, dcubed